# oroba

./: .gitignore  Makefile  default.config  meson.build
doc/: evaluation.org
include/: command_line_args.hpp
include/gc/: collector.hpp
include/oroba/: eval.hpp  parse.hpp
include/oroba/data/: bytecode.hpp  error.hpp
include/oroba/kernel/: generics.hpp  kernel.hpp  math.hpp  system.hpp  traits.hpp  world.hpp
include/oroba/object/: collections.hpp  composite.hpp  multimethod.hpp  namespace.hpp  object.hpp  ostream.hpp  primitive_method.hpp  primitives.hpp  user_object.hpp
include/oroba/objects/: collections.hpp  composite.hpp  init.hpp  multimethod.hpp  namespace.hpp  numeric.hpp  object.hpp  primitive.hpp  primitive_method.hpp
include/oroba/parse/: parse.hpp  tokstream.hpp
include/oroba/world/: generics.hpp  lobby.hpp  math.hpp  os.hpp  ports.hpp  system.hpp  traits.hpp  world.hpp
src/: command_line_args.cpp  main.cpp  meson.build
src/gc/: collector.cpp  meson.build
src/oroba/: eval.cpp  meson.build  parse.cpp
src/oroba/data/: bytecode.cpp  error.cpp  meson.build
src/oroba/kernel/: generics.cpp  kernel.cpp  math.cpp  meson.build  system.cpp  traits.cpp
src/oroba/object/: collections.cpp  composite.cpp  meson.build  namespace.cpp  object.cpp  ostream.cpp  primitives.cpp
src/oroba/objects/: collections.cpp  composite.cpp  init.cpp  meson.build  namespace.cpp  numeric.cpp  object.cpp  primitive.cpp
src/oroba/parse/: meson.build  parse.cpp  tokstream.cpp
src/oroba/world/: generics.cpp  lobby.cpp  math.cpp  meson.build  (+5 more)
test/src/: test.cpp
(+12 files in other folders)
